--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div class="container">
       <h1 class="display-3 col-12">Work Day Scheduler</h1>
       <p class="lead col-12">A simple calendar app for scheduling your work day</p>
+      <!-- Current date and navigation buttons -->
       <div class="row no-gutters">
         <div class="col-2 col-md-3 col-lg-4 p-0 text-right">
           <button class="btn btn-primary btn-rounded" id="previous"><i class='fa fa-chevron-left'></i></button>
@@ -35,6 +36,7 @@
   </div>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <!-- Link to javascript files -->
   <script src="assets/script/task-helper.js"></script>
   <script src="assets/script/script.js"></script>
 </body>
