Updated Readme file, code cleanups

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
     </div>
   </header>
-  <div class="container" id="timeblockContainer">
+  <div class="container mb-4" id="timeblockContainer">
     <!-- Timeblocks go here -->
   </div>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
